--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -10,4 +10,8 @@
 	<li class="active">New Employee</li>
 </ul>
 
-<%= render 'form' %>
+<div class="container-fluid">
+	<div class="col-xs-12">
+		<%= render 'form' %>
+	</div>
+</div>
