--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -8,7 +8,8 @@
 	<li class="active">New Location</li>
 </ul>
 
-
-<%= render 'form' %>
-
-<%= link_to 'Back', locations_path %>
+<div class="container-fluid">
+	<div class="col-xs-12">
+		<%= render 'form' %>
+	</div>
+</div>
