--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -5,9 +5,14 @@
 <ul class="breadcrumb" style="background: none">
 	<li><%= link_to "Home", root_path %></li>
 	<li><%= link_to "Locations", locations_path %></li>
-	<li><%= link_to "Newton", location_path(@location) %></li>
+	<li><%= link_to "#{@location.name}", location_path(@location) %></li>
 	<li><%= link_to "Employees", location_employees_path(@location) %></li>
 	<li class="active"><%= "Edit #{@employee.name.titleize}" %></li>
 </ul>
 
-<%= render 'form' %>
+<div class="container-fluid">
+	<div class="col-xs-12">
+		<%= render 'form' %>
+	</div>
+</div>
+
