--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -9,42 +9,64 @@
 	<li class="active"><%= "#{@location.name.titleize} Employees" %></li>
 </ul>
 
-<div class="container-fluid col-xs-10 col-xs-offset-1 m-y-2">
-	<% if @employees.length == 0 %>
-		<h2 class="text-xs-center">No employees found</h2>
-	<% else %>
-		<table class="table table-striped table-bordered table-hover">
-			<thead>
-				<tr>
-					<th>Name</th>
-					<th>Phone</th>
-					<th>Email</th>
-					<th>Location</th>
-					<th colspan="2" class="text-xs-center">Actions</th>
-				</tr>
-			</thead>
-
-			<tbody>
-				<% @employees.each do |employee| %>
+<div class="container-fluid">
+	<div class="col-xs-10 col-xs-offset-1 m-y-2">
+		<% if @employees.length == 0 %>
+			<h2 class="text-xs-center">No employees found</h2>
+		<% else %>
+			<table class="table table-striped table-bordered table-hover">
+				<thead>
 					<tr>
-						<% if employee.manager? %>
-						  <td><strong><%= link_to employee.name.titleize, location_employee_path(@location, employee) %></strong></td>
-					 	<% else %>
-							<td><%= link_to employee.name.titleize, location_employee_path(@location, employee) %></td>
-						<% end %>
-						<td><%= employee.phone %></td>
-						<td><%= employee.email %></td>
-						<td><%= employee.location.name %></td>
-						<td class="table-action"><%= link_to 'Edit', edit_location_employee_path(@location, employee) %></td>
-						<td class="table-action"><%= link_to 'Destroy', location_employee_path(@location, employee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+						<th>Name</th>
+						<th>Phone</th>
+						<th>Email</th>
+						<th>Location</th>
+						<th colspan="4" class="text-xs-center">Actions</th>
 					</tr>
-				<% end %>
-			</tbody>
-		</table>
-	<% end %>
+				</thead>
+	<%# console %>
+				<tbody>
+					<% @employees.each do |employee| %>
+						<tr>
+							<% if employee.manager? %>
+								<td>
+									<strong>
+										<%= link_to employee.name.titleize, location_employee_path(@location, employee)%>
+									</strong>
+								</td>
+							<% else %>
+								<td>
+									<%= link_to employee.name.titleize, location_employee_path(@location, employee), class: "terminated-#{employee.terminated?}" %>
+								</td>
+							<% end %>
+							<td><%= employee.phone %></td>
+							<td><%= employee.email %></td>
+							<td><%= employee.location.name %></td>
+							<td class="table-action"><%= link_to 'Edit', edit_location_employee_path(@location, employee) %></td>
+							<td class="table-action">
+								<% if employee.manager %>
+									<%= link_to "Demote", set_manager_path(employee) %>
+								<% else %>
+									<%= link_to "Promote", set_manager_path(employee) %>
+								<% end %>
+							</td>
+							<td class="table-action">
+								<% if employee.terminated == true %>
+									<%= link_to "Hire", toggle_fire_path(employee) %>
+								<% else %>
+									<%= link_to "Fire", toggle_fire_path(employee) %>
+								<% end %>
+							</td>
+							<td class="table-action"><%= link_to 'Destroy', location_employee_path(@location, employee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		<% end %>
+	</div>
 </div>
 
 <div class="col-xs-12 text-xs-center">
-	<button class="btn btn-primary"><%= link_to 'New Employee', new_location_employee_path(@location), class: "text-white" %></button>
-	<button class="btn btn-primary"><%= link_to "Edit #{@location.name}", edit_location_path(@location), class: "text-white" %></button>
+	<button class="btn btn-primary btn-raised"><%= link_to 'New Employee', new_location_employee_path(@location), class: "text-white" %></button>
+	<button class="btn btn-primary btn-raised"><%= link_to "Edit #{@location.name}", edit_location_path(@location), class: "text-white" %></button>
 </div>
