--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -7,28 +7,29 @@
 	<li class="active">Locations</li>
 </ul>
 
-<div class="container-fluid col-xs-10 col-xs-offset-1 m-y-2">
-	<table class="table table-hover table-striped table-bordered">
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>Employees</th>
-				<th colspan="3" class="text-xs-center">Actions</th>
-			</tr>
-		</thead>
-
-		<tbody>
-			<% @locations.each do |location| %>
+<div class="container-fluid">
+	<div class="col-xs-10 col-xs-offset-1 m-y-2">
+		<table class="table table-hover table-striped table-bordered location-table" id="">
+			<thead>
 				<tr>
-					<td><%= link_to location.name, location_path(location) %></td>
-					<td><%= location.employees.length %></td>
-					<td class="table-action"><%= link_to 'Show', location %></td>
-					<td class="table-action"><%= link_to 'Edit', edit_location_path(location) %></td>
-					<td class="table-action"><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+					<th>Name</th>
+					<th>Employees</th>
+					<th colspan="2" class="text-xs-center">Actions</th>
 				</tr>
-			<% end %>
-		</tbody>
-	</table>
+			</thead>
+
+			<tbody>
+				<% @locations.each do |location| %>
+					<tr>
+						<td><%= link_to location.name, location_path(location) %></td>
+						<td><%= location.employees.length %></td>
+						<td class="table-action"><%= link_to 'Edit', edit_location_path(location) %></td>
+						<td class="table-action"><%= link_to 'Destroy', location, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+	</div>
 </div>
 
 <div class="col-xs-12 text-xs-center">
