--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,19 @@
 <div class="jumbotron jumbotron-fluid">
 	<div class="container-fluid text-center">
 		<h1 class="text-xs-center">Welcome to the Employee Portal</h1>
-<!--		<hr class="m-y-2">-->
 	</div>
 </div>
 
-<div class="container-fluid col-xs-8 col-xs-offset-2 text-xs-center">
-	<h2>Useful Links</h2>
-	<button class="btn btn-primary"><%= link_to "Locations", locations_path, class: "text-white" %></button>
-	<button class="btn btn-primary"><%= link_to "Employees", fetch_employees_path, class: "text-white" %></button>
+<div class="container-fluid">
+	<div class="col-xs-12 text-xs-center">
+		<div class="row">
+			<h2>Useful Links</h2>
+		</div>
+		<div class="row">
+			<button class="btn btn-primary btn-raised"><%= link_to "Locations", locations_path, class: "text-white" %></button>
+			<button class="btn btn-primary btn-raised"><%= link_to "Employees", fetch_employees_path, class: "text-white" %></button>
+			<button class="btn btn-primary btn-raised"><%= link_to "Timecards", timecards_path, class: "text-white" %></button>
+			<button class="btn btn-primary btn-raised"><%= link_to "Payrolls", payrolls_path, class: "text-white" %></button>
+		</div>
+	</div>
 </div>
